2006-02-05 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(indexFaceNormal(size_t, size_t, size_t, const
	std::vector<openvrml::vec3f> &)):  Normalize the returned vec3f.

2006-02-05 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(shell_tess_begin(GLenum, void *)): Fixed use of glColor3fv where
	glNormal3fv should be used.

2006-02-05 Braden McDaniel  <braden@endoframe.com>

	Added missing instances of OPENVRML_GL_LOCAL.

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(checkErrors(const std::string &)): Added OPENVRML_GL_LOCAL.
	(computeCylinder(double, double, int, float[][3], float[][3],
	int[])): Added OPENVRML_GL_LOCAL.
	(elevationVertexNormal(int, int, int, int, float, float)): Added
	OPENVRML_GL_LOCAL.
	(TessExtrusion): Added OPENVRML_GL_LOCAL.
	(insertExtrusionCaps(GLUtesselator &, unsigned int, size_t, const
	std::vector<vec3f> &, const std::vector<vec2f> &)): Added
	OPENVRML_GL_LOCAL.
	(computeExtrusion_(const std::vector<rotation> &, const
	std::vector<vec2f> &, const std::vector<vec2f> &, const
	std::vector<vec3f> &, std::vector<vec3f> &, std::vector<vec2f>&)):
	Added OPENVRML_GL_LOCAL.
	(computeExtrusion_(const std::vector<rotation> &, const
	std::vector<vec2f> &, const std::vector<vec2f> &, const
	std::vector<vec3f> &, std::vector<vec3f> &, std::vector<vec2f> &,
	std::vector<int32> &)): Added OPENVRML_GL_LOCAL.
	(computeBounds(size_t, const float *, float (&)[6])): Added
	OPENVRML_GL_LOCAL.
	(texGenParams(float[], int[], float[])): Added OPENVRML_GL_LOCAL.
	(insertShellConvex(ShellData *)): Added OPENVRML_GL_LOCAL.
	(insertShellTess(GLUtesselator &, const std::vector<vertex_data>&,
	const std::vector<int32> &, bool, const std::vector<color> &,
	const std::vector<int32> &, bool, const std::vector<vec3f> &,
	const std::vector<int32> &)): Added OPENVRML_GL_LOCAL.
	(computeSphere(double, int, float[][3], float[][3], int *)): Added
	OPENVRML_GL_LOCAL.